[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/screens/prova.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/user interface/themes/MinimalUI/MinimalUI.tres" type="Theme" id=2]
[ext_resource path="res://src/screens/PeopleScreen.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -244.0
margin_top = 30.0
margin_right = 244.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 1 )
text = "Lista pazienti:"
align = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 1.0
margin_top = 103.0
margin_right = 1914.0
margin_bottom = 189.0

[node name="Nome" type="Label" parent="HBoxContainer"]
margin_top = 3.0
margin_right = 635.0
margin_bottom = 83.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Nome"

[node name="Cognome" type="Label" parent="HBoxContainer"]
margin_left = 639.0
margin_top = 3.0
margin_right = 1274.0
margin_bottom = 83.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Cognome"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 1278.0
margin_right = 1913.0
margin_bottom = 86.0
size_flags_horizontal = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/HBoxContainer"]
margin_left = 317.0
margin_right = 317.0
margin_bottom = 86.0
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_left = 2.0
margin_top = 210.0
margin_right = 1916.0
margin_bottom = 296.0
theme = ExtResource( 2 )

[node name="LineEdit" type="LineEdit" parent="HBoxContainer2"]
margin_right = 202.0
margin_bottom = 90.0
size_flags_horizontal = 2
custom_fonts/font = ExtResource( 1 )
expand_to_text_length = true

[node name="LineEdit2" type="LineEdit" parent="HBoxContainer2"]
margin_left = 639.0
margin_right = 841.0
margin_bottom = 90.0
size_flags_horizontal = 2
custom_fonts/font = ExtResource( 1 )
expand_to_text_length = true

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer2"]
margin_left = 1278.0
margin_right = 1584.0
margin_bottom = 90.0
size_flags_horizontal = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer2/HBoxContainer"]
margin_right = 306.0
margin_bottom = 90.0
alignment = 1

[node name="Button1" type="Button" parent="HBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 306.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 1 )
text = "DETTAGLI"

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
margin_left = 1.0
margin_top = 321.0
margin_right = 1915.0
margin_bottom = 411.0
theme = ExtResource( 2 )

[node name="LineEdit" type="LineEdit" parent="HBoxContainer3"]
margin_right = 202.0
margin_bottom = 90.0
size_flags_horizontal = 2
custom_fonts/font = ExtResource( 1 )
expand_to_text_length = true

[node name="LineEdit2" type="LineEdit" parent="HBoxContainer3"]
margin_left = 639.0
margin_right = 841.0
margin_bottom = 90.0
size_flags_horizontal = 2
custom_fonts/font = ExtResource( 1 )
expand_to_text_length = true

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer3"]
margin_left = 1278.0
margin_right = 1584.0
margin_bottom = 90.0
size_flags_horizontal = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer3/HBoxContainer"]
margin_right = 306.0
margin_bottom = 90.0
alignment = 1

[node name="Button2" type="Button" parent="HBoxContainer3/HBoxContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 306.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 1 )
text = "DETTAGLI"

[node name="HBoxContainer4" type="HBoxContainer" parent="."]
margin_left = 2.0
margin_top = 431.0
margin_right = 1916.0
margin_bottom = 521.0
theme = ExtResource( 2 )

[node name="LineEdit" type="LineEdit" parent="HBoxContainer4"]
margin_right = 202.0
margin_bottom = 90.0
size_flags_horizontal = 2
custom_fonts/font = ExtResource( 1 )
expand_to_text_length = true

[node name="LineEdit2" type="LineEdit" parent="HBoxContainer4"]
margin_left = 639.0
margin_right = 841.0
margin_bottom = 90.0
size_flags_horizontal = 2
custom_fonts/font = ExtResource( 1 )
expand_to_text_length = true

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer4"]
margin_left = 1278.0
margin_right = 1584.0
margin_bottom = 90.0
size_flags_horizontal = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer4/HBoxContainer"]
margin_right = 306.0
margin_bottom = 90.0
alignment = 1

[node name="Button3" type="Button" parent="HBoxContainer4/HBoxContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 306.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 1 )
text = "DETTAGLI"

[node name="Back" type="Button" parent="."]
margin_left = 740.0
margin_top = 906.0
margin_right = 1059.0
margin_bottom = 992.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "INDIETRO"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="HBoxContainer2/HBoxContainer/VBoxContainer/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="HBoxContainer3/HBoxContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="HBoxContainer4/HBoxContainer/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
